# bin-it

./: Cargo.toml  README.md
src/: lib.rs
